--- a/products/RAT-STATS/rstats_ui/src/UIRStatsLaunchConfigDialog.ui
+++ b/products/RAT-STATS/rstats_ui/src/UIRStatsLaunchConfigDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>618</width>
-    <height>261</height>
+    <width>388</width>
+    <height>267</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -54,97 +54,75 @@
        <property name="bottomMargin">
         <number>4</number>
        </property>
-       <item row="1" column="2">
-        <widget class="QComboBox" name="m_cmbCategories">
-         <property name="editable">
-          <bool>true</bool>
+       <item row="5" column="0">
+        <widget class="QLabel" name="label_7">
+         <property name="text">
+          <string>Module Icon:</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="2">
-        <widget class="QLineEdit" name="m_txtName"/>
-       </item>
-       <item row="2" column="2">
-        <widget class="QComboBox" name="m_cmbTypes">
+       <item row="5" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <property name="leftMargin">
+          <number>4</number>
+         </property>
+         <property name="topMargin">
+          <number>4</number>
+         </property>
+         <property name="rightMargin">
+          <number>4</number>
+         </property>
+         <property name="bottomMargin">
+          <number>4</number>
+         </property>
          <item>
-          <property name="text">
-           <string>Binary</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Python Script</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>R Script</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-       <item row="3" column="2">
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QLineEdit" name="m_txtLocation"/>
-         </item>
-         <item>
-          <widget class="QPushButton" name="m_btnBrowseLocation">
+          <widget class="QPushButton" name="m_btnSetIcon">
+           <property name="minimumSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
            <property name="text">
-            <string>Browse</string>
+            <string/>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>24</width>
+             <height>24</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="m_chkShowConsole">
+           <property name="text">
+            <string>Show output console</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
-       <item row="4" column="0">
-        <widget class="QLabel" name="label_6">
-         <property name="text">
-          <string>Arguments:</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="2">
-        <widget class="QCheckBox" name="m_chkShowConsole">
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="0">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>Show Console:</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Name:</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="m_lblPath">
-         <property name="text">
-          <string>Path:</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="2">
+       <item row="6" column="1">
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <property name="leftMargin">
           <number>4</number>
@@ -181,8 +159,81 @@
          </item>
         </layout>
        </item>
-       <item row="4" column="2">
+       <item row="4" column="1">
         <widget class="QLineEdit" name="m_txtArgs"/>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="m_txtName"/>
+       </item>
+       <item row="2" column="1">
+        <widget class="QComboBox" name="m_cmbTypes">
+         <item>
+          <property name="text">
+           <string>Binary</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Python Script</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>R Script</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Name:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="m_cmbCategories">
+         <property name="editable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Arguments:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="m_lblPath">
+         <property name="text">
+          <string>Path:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QLineEdit" name="m_txtLocation"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="m_btnBrowseLocation">
+           <property name="text">
+            <string>Browse</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_5">
@@ -204,41 +255,6 @@
          </property>
         </widget>
        </item>
-       <item row="5" column="0">
-        <widget class="QLabel" name="label_4">
-         <property name="text">
-          <string>Set Icon:</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="2">
-        <widget class="QPushButton" name="m_btnSetIcon">
-         <property name="minimumSize">
-          <size>
-           <width>32</width>
-           <height>32</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>32</width>
-           <height>32</height>
-          </size>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="iconSize">
-          <size>
-           <width>24</width>
-           <height>24</height>
-          </size>
-         </property>
-        </widget>
-       </item>
       </layout>
      </item>
     </layout>
@@ -247,15 +263,16 @@
  </widget>
  <tabstops>
   <tabstop>m_txtName</tabstop>
+  <tabstop>m_txtLocation</tabstop>
   <tabstop>m_cmbCategories</tabstop>
   <tabstop>m_cmbTypes</tabstop>
-  <tabstop>m_txtLocation</tabstop>
   <tabstop>m_btnBrowseLocation</tabstop>
   <tabstop>m_txtArgs</tabstop>
-  <tabstop>m_chkShowConsole</tabstop>
   <tabstop>m_btnSave</tabstop>
   <tabstop>m_btnLaunch</tabstop>
   <tabstop>m_btnCancel</tabstop>
+  <tabstop>m_chkShowConsole</tabstop>
+  <tabstop>m_btnSetIcon</tabstop>
  </tabstops>
  <resources/>
  <connections/>
