--- a/products/RAT-STATS/rstats_modules/single_stage_random_numbers/src/UIRStatsSSRN.ui
+++ b/products/RAT-STATS/rstats_modules/single_stage_random_numbers/src/UIRStatsSSRN.ui
@@ -315,6 +315,12 @@
            </item>
            <item row="1" column="1">
             <widget class="QDoubleSpinBox" name="m_spnSeed">
+             <property name="decimals">
+              <number>8</number>
+             </property>
+             <property name="minimum">
+              <double>0.000000000000000</double>
+             </property>
              <property name="maximum">
               <double>9999999999.000000000000000</double>
              </property>
@@ -322,15 +328,21 @@
            </item>
            <item row="1" column="5">
             <widget class="QSpinBox" name="m_spnHighNumber">
+             <property name="minimum">
+              <number>-999999999</number>
+             </property>
              <property name="maximum">
-              <number>100000</number>
+              <number>999999999</number>
              </property>
             </widget>
            </item>
            <item row="1" column="4">
             <widget class="QSpinBox" name="m_spnLowNumber">
+             <property name="minimum">
+              <number>-999999999</number>
+             </property>
              <property name="maximum">
-              <number>100000</number>
+              <number>999999999</number>
              </property>
             </widget>
            </item>
