--- a/products/RAT-STATS/rstats_modules/stratified_variable_appraisal/src/UIRStatsSVA.ui
+++ b/products/RAT-STATS/rstats_modules/stratified_variable_appraisal/src/UIRStatsSVA.ui
@@ -530,7 +530,7 @@
      <item row="3" column="0">
       <widget class="QTableWidget" name="m_tblSizes">
        <property name="editTriggers">
-        <set>QAbstractItemView::AllEditTriggers</set>
+        <set>QAbstractItemView::NoEditTriggers</set>
        </property>
        <property name="selectionMode">
         <enum>QAbstractItemView::NoSelection</enum>
@@ -760,7 +760,7 @@
      <item>
       <widget class="QTableWidget" name="m_tblData">
        <property name="editTriggers">
-        <set>QAbstractItemView::AllEditTriggers</set>
+        <set>QAbstractItemView::NoEditTriggers</set>
        </property>
        <property name="selectionMode">
         <enum>QAbstractItemView::SingleSelection</enum>
@@ -860,7 +860,7 @@
      <x>0</x>
      <y>0</y>
      <width>1103</width>
-     <height>21</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
