--- a/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
+++ b/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
@@ -351,7 +351,7 @@
            <number>1</number>
           </property>
           <property name="maximum">
-           <number>2000000000</number>
+           <number>999999999</number>
           </property>
           <property name="value">
            <number>1</number>
@@ -667,7 +667,7 @@
         <bool>true</bool>
        </attribute>
        <attribute name="verticalHeaderVisible">
-        <bool>true</bool>
+        <bool>false</bool>
        </attribute>
       </widget>
      </item>
